[gd_scene load_steps=8 format=3 uid="uid://cj2pisgqrvjpg"]

[ext_resource type="PackedScene" uid="uid://bn4m2tay0i6rj" path="res://scenes/filterable_list.tscn" id="1_ik3ua"]
[ext_resource type="Script" uid="uid://dkjpe1h01qajx" path="res://scripts/kana.gd" id="1_lbobb"]
[ext_resource type="Script" uid="uid://b4jf6wsar8kht" path="res://scripts/my_text_edit.gd" id="2_qx2ew"]
[ext_resource type="Texture2D" uid="uid://betwmvm2in178" path="res://assets/images/kanji-block2.png" id="3_fb42p"]
[ext_resource type="Script" uid="uid://de5btcjhreqd2" path="res://scripts/draw_panel.gd" id="4_tqo21"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mv8oo"]
texture = ExtResource("3_fb42p")

[sub_resource type="LabelSettings" id="LabelSettings_xduwt"]
font_size = 600

[node name="Kana" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_lbobb")

[node name="FilterableList" parent="." instance=ExtResource("1_ik3ua")]

[node name="ScrollContainer" parent="FilterableList" index="1"]
offset_bottom = 912.0

[node name="KanaLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 944.0
offset_right = 194.0
offset_bottom = 1014.0
text = "Kana:"

[node name="KanaEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 936.0
offset_right = 1016.0
offset_bottom = 1016.0
editable = false
script = ExtResource("2_qx2ew")
metadata/_custom_type_script = "uid://b4jf6wsar8kht"

[node name="Redraw" type="Button" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 1026.0
offset_right = 808.0
offset_bottom = 1128.0
text = "Redraw"

[node name="DrawPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 191.0
offset_top = 1157.0
offset_right = 891.0
offset_bottom = 1857.0
theme_override_styles/panel = SubResource("StyleBoxTexture_mv8oo")
script = ExtResource("4_tqo21")
metadata/_custom_type_script = "uid://de5btcjhreqd2"

[node name="Example" type="Label" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 1007.0
offset_right = 893.0
offset_bottom = 1876.0
text = "æ¼¢"
label_settings = SubResource("LabelSettings_xduwt")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Redraw" to="." method="_on_redraw_pressed"]
[connection signal="stroke_drawn_raw" from="DrawPanel" to="." method="_on_draw_panel_stroke_drawn_raw"]

[editable path="FilterableList"]
